load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "BitmapAttr",
    srcs = ["BitmapAttr.cpp"],
    hdrs = ["BitmapAttr.h"],
    deps = [
        "//ujcore/base:Bitmap",
        "//ujcore/base:BitmapPool",
        "//ujcore/function:AttributeDataType",
        "//ujcore/function:AttributeTypeRegistry",
        "//ujcore/function:ResourceContext",
        "@abseil-cpp//absl/log:check",
        "@nlohmann_json//:json",
    ],
    alwayslink = 1,  # The types register themselves in the AttributeTypeRegistry.
)

cc_library(
    name = "FloatListAttr",
    srcs = ["FloatListAttr.cpp"],
    hdrs = ["FloatListAttr.h"],
    deps = [
        "//ujcore/function:AttributeDataType",
        "//ujcore/function:AttributeTypeRegistry",
        "@abseil-cpp//absl/log:check",
        "@nlohmann_json//:json",
    ],
    alwayslink = 1,  # The types register themselves in the AttributeTypeRegistry.
)

cc_library(
    name = "Points2DAttr",
    srcs = ["Points2DAttr.cpp"],
    hdrs = ["Points2DAttr.h"],
    deps = [
        "//ujcore/function:AttributeDataType",
        "//ujcore/function:AttributeTypeRegistry",
        "@abseil-cpp//absl/log:check",
        "@nlohmann_json//:json",
    ],
    alwayslink = 1,  # The types register themselves in the AttributeTypeRegistry.
)

cc_library(
    name = "all_attributes",
    deps = [
        ":BitmapAttr",
        ":FloatListAttr",
        ":Points2DAttr",
    ],
)
