load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "GraphOperatorBase",
    hdrs = ["GraphOperatorBase.hpp"],
    deps =[
        "//ujcore/graph:GraphState",
    ],
)

cc_library(
    name = "InsertNodeOp",
    srcs = ["InsertNodeOp.cpp"],
    hdrs = ["InsertNodeOp.hpp"],
    deps =[
        ":GraphOperatorBase",
        "//ujcore/functions:FunctionIoUtils",
        "//ujcore/functions:NodeFunctionSpec",
        "//ujcore/graph:IdGenerator",
        "@abseil-cpp//absl/log",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "all_ops",
    deps =[
        ":InsertNodeOp",
    ],
)